--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
@@ -17,7 +18,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-barcode-mask": "^1.2.4"
+    "react-native-barcode-mask": "^1.2.4",
+    "react-native-webview": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
