feature: atualização de coódigo

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ScanBarcode",
+    "name": "ScanRedir",
     "slug": "ScanBarcode",
     "version": "1.0.0",
     "assetBundlePatterns": [
